static/css/main.css
/* --- General --- */

body {
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 18px;
  color: #3c3c3b;
  font-weight: 300;
  position: relative;
  background: #FFFFFF;
  display: flex;
  flex-flow: column;
  height: 100vh;
  text-align: left;
  /* line height is set below in p{} */
  /*padding-top: 60px */ /*prevent navbar overlaying body text for most screenwidths (BK) */

}



@media (prefers-color-scheme: dark) {
  body {
    background: #2d2d2c;
    color: white;
  }
}

button {
  background-color: inherit;
  /*background-color:white;*/
  border: 1px solid black;
  margin-top:20px;
}

@media (prefers-color-scheme: dark) {
  button {
    background-color: inherit;
    /*background-color: #2d2d2c;*/
    border: 1px solid white;
  }
}

button:hover {
  opacity: 0.8;
}

.sectionblockright {
  position: absolute;
  border-style: solid;
  right: 0px;
  padding-left: 5px;
  padding-right: 5px;
}

.sectionblockleft {
  position: absolute;
  border-style: solid;
  left: 0px;
  padding-left: 5px;
  padding-right: 5px;
}

.well.about {
    background-color: #FECF65;
    text-align: left;
}

@media (prefers-color-scheme: dark) {
.well.about {
    background-color: #494066;
    border:1px solid #494066;
} 
}

.well.home {
    background-color: #e8e6e4;
    text-align: left;
}

@media (prefers-color-scheme: dark) {
.well.home {
    background-color: #494066;
    border:1px solid #494066;
}
}

.container[role=main] {
  margin-bottom:50px;
  flex: 1 0 auto;
}

@media only screen and (max-width: 767px) {
.container[role=main] {
    margin-left: 0;
    margin-right: 0;
}
}

p {
  line-height: 1.8; /* this is where line height is set */
  margin: 6px 0;
}
p + p {
    margin: 32px 0 6px 0;
}
p a {
  /* text-decoration: underline */
  color: #9792c1;
}
@media (prefers-color-scheme: dark) {
  p a {
    color: #9792c1;
  }
}

h1,h2,h3,h4,h5,h6 {
  font-family:  'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 400;
  color: #494066;
  text-align: left;
}

@media (prefers-color-scheme: dark) {
h1,h2,h3,h4,h5,h6 {
  color: white;
}
}

h1 {
  text-transform: uppercase;
}

}
a {
  color: #9792c1;
}
@media (prefers-color-scheme: dark) {
  a {
    color: #9792c1;
  }
}
a:hover,
a:focus {
  color: #0085a1;
}
blockquote {
  color: #808080;
  font-style: italic;
}
blockquote p:first-child {
  margin-top: 0;
}
@media (prefers-color-scheme: dark) {
  blockquote {
    border-left: 5px solid #444;
  }
}
hr.small {
  max-width: 100px;
  border-width: 4px;
  border-color: #FECF65;
  border-radius: 3px;
  margin: 15px auto 15px 0;
}

.main-content {
  padding-top: 80px;
}
@media only screen and (min-width: 768px) {
  .main-content {
    padding-top: 130px;
  }
}

.main-explain-area {
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 15px inherit;
}

.hideme {
  display: none;
}

div.panel-body a.list-group-item {
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 700;
  border-radius: 0;
  border: none;
  font-size: 16px;
}
div.panel-group .panel {
    border-radius: 0;
}
div.panel-group .panel+.panel {
    margin-top: 0;
}

div.panel-body a.list-group-item.view-all {
  font-weight: 700;
}

::-moz-selection, ::selection {
  color: white;
  text-shadow: none;
  background: #0085a1;
}
img::selection, img::-moz-selection {
  color: white;
  background: transparent;
}


img {
  display: block;
  margin: auto;
  max-width: 100%;
}
@media (prefers-color-scheme: dark) {
figure:not(.dark) img, img.white {
  background-color: white;
}
}

.img-title {
  width: 100%;
}

.disqus-comments {
  margin-top: 30px;
}

@media only screen and (min-width: 768px) {
  .disqus-comments {
    margin-top: 40px;
  }
}

/* --- Navbar --- */

.navbar-custom {
  background: #fecf65;
  border-bottom: 1px solid #EAEAEA;
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

@media (prefers-color-scheme: dark) {
  .navbar-custom {
    background: #404040;
    border-bottom: 1px solid #404040;
    
    /*background: #494066;
    border-bottom: 1px solid #494066;*/
  }
}

.navbar-custom .nav li a {
  text-transform: uppercase;
  font-size: 13px; /*12px*/
  letter-spacing: 1px;
}

.navbar-custom .navbar-brand,
.navbar-custom .nav li a {
  font-weight: 700;
  color: #404040;
  text-transform: uppercase;
  font-size: 13px; /*12px*/
}

@media (prefers-color-scheme: dark) {
  .navbar-custom .navbar-brand,
  .navbar-custom .nav li a {
    color: white;
  }
}


.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus ,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
  color: white;
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus ,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
  @media (prefers-color-scheme: dark) {
    color: #fdca50;
  }
}

.navbar-custom .navbar-brand-logo {
  padding-top: 0;
  -webkit-transition: padding .5s ease-in-out;
  -moz-transition: padding .5s ease-in-out;
  transition: padding .5s ease-in-out;
}
.navbar-custom .navbar-brand-logo img {
  height: 50px;
  -webkit-transition: height .5s ease-in-out;
  -moz-transition: height .5s ease-in-out;
  transition: height .5s ease-in-out;
}
.navbar-custom.top-nav-short .navbar-brand-logo {
  padding-top: 5px;
}
.navbar-custom.top-nav-short .navbar-brand-logo img {
  height: 40px;
}

@media only screen and (min-width: 768px) {
  .navbar-custom {
    padding: 10px 0;
    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
    transition: background .5s ease-in-out,padding .5s ease-in-out;
  }

  .navbar-custom.top-nav-short {
    padding: 0;
  }
}
/* ... */

